--- a/package.json
+++ b/package.json
@@ -36,14 +36,16 @@
   "homepage": "https://github.com/DarryllRobinson/otab_server#readme",
   "dependencies": {
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.1",
+    "nodemailer": "^6.9.2",
     "pkg": "^5.8.1",
     "sequelize": "^6.31.1"
   },
