--- a/package.json
+++ b/package.json
@@ -35,19 +35,11 @@
   },
   "homepage": "https://github.com/DarryllRobinson/otab_server#readme",
   "dependencies": {
-    "axios": "^1.6.0",
-    "bcrypt": "^5.1.0",
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
-    "joi": "^17.9.2",
-    "jsonwebtoken": "^9.0.0",
-    "mysql2": "^3.3.1",
-    "nodemailer": "^6.9.2",
-    "pkg": "^5.8.1",
-    "sequelize": "^6.31.1"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
