--- a/package.json
+++ b/package.json
@@ -35,11 +35,15 @@
   },
   "homepage": "https://github.com/DarryllRobinson/otab_server#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "joi": "^17.12.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.3.1"
+    "mysql2": "^3.3.1",
+    "nodemailer": "^6.9.8",
+    "sequelize": "^6.35.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
