--- a/package.json
+++ b/package.json
@@ -1,35 +1,26 @@
 {
   "name": "otab_server",
   "version": "1.0.0",
-  "description": "MySQL server for Over The Air Bingo",
-  "main": "./src/server.js",
-  "bin": "./src/server.js",
+  "description": "Back-end for OTAB application",
+  "main": "server.js",
   "scripts": {
     "start": "node ./server.js",
-    "start:dev": "REACT_APP_STAGE='development' nodemon ./src/server.js"
-  },
-  "pkg": {
-    "assets": [
-      "node_modules/**/*",
-      "src/**/*"
-    ],
-    "targets": [
-      "node13-linux-x64"
-    ],
-    "outputPath": "build"
+    "start:dev": "nodemon ./server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DarryllRobinson/otab_server.git"
   },
   "keywords": [
-    "otab",
+    "node",
+    "express",
+    "token",
     "server",
-    "mysql",
-    "node"
+    "otab"
   ],
   "author": "Darryll Robinson",
-  "license": "MIT",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/DarryllRobinson/otab_server/issues"
   },
@@ -41,13 +32,16 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
-    "joi": "^17.12.0",
+    "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.3.1",
-    "nodemailer": "^6.9.8",
-    "sequelize": "^6.35.2"
+    "mysql2": "^3.9.1",
+    "nodemailer": "^6.9.9",
+    "rootpath": "^0.1.2",
+    "sequelize": "^6.36.0",
+    "swagger-ui-express": "^5.0.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.0.3"
   }
 }
