--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
     "port": 587,
     "auth": {
       "user": "darryllrobinson@icloud.com",
-      "pass": "knbj-zwqt-lkgf-rryj"
+      "pass": "knjB-zqWt-lfgf-aryj"
     }
   }
 }
