--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "express-jwt": "^8.4.1",
+    "express-rate-limit": "^7.5.0",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.8",
@@ -39,6 +40,7 @@
     "rootpath": "^0.1.2",
     "sequelize": "^6.36.0",
     "swagger-ui-express": "^5.0.0",
+    "winston": "^3.17.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
